--- a/templates/emails/welcome_email.html.twig
+++ b/templates/emails/welcome_email.html.twig
@@ -57,6 +57,7 @@
             <li>Ve a la sección de panel de usuario de tu cuenta.</li>
             <li>Selecciona "Cambiar contraseña" y sigue las instrucciones.</li>
         </ol>
+        <p>Recuerda que antes de poder ser asignado a un grupo debes de introducir tu horario semanal</p>
         <p>Si tienes alguna pregunta o necesitas ayuda, no dudes en contactarnos en {{ support_email }} .</p>
         <p>Gracias por unirte a nosotros.</p>
         <p>Saludos cordiales,<br>El equipo de CommunWheels</p>
