--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -15,6 +15,7 @@ body {
     background-color: var(--back-color);
     position: fixed;
     width: 100%;
+    height: 50px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
