--- a/templates/users/main.html.twig
+++ b/templates/users/main.html.twig
@@ -1,53 +1,53 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="card-grid">
-        <div class="button_container">
-            <a href="{{ path('driver_new') }}" class="primaryButton"><i class="ti ti-plus"></i>Nuevo conductor</a>
-        </div>
-        <div class="card_container">
-            {% for driver in pagination %}
-                <div class="expandable-container">
-                    <div class="expandable">
-                        <span class="title">{{ driver.name }} {{ driver.lastName }}</span>
-                        <div class="icons">
-                            <a href="{{ path('driver_mod', {'id': driver.id, 'redirect': app.request.uri}) }}"
-                               class="btn edit">
-                                <i class="ti ti-edit" style="font-size: 1.5rem"></i>
-                            </a>
-                            <a href="#" class="btn delete" onclick="confirmDelete({{ driver.id }})"><i
-                                        class="ti ti-trash" style="font-size: 1.5rem"></i></a>
-                            <span class="icon"><i class="ti ti-caret-down-filled" style="font-size: 1.5rem"></i></span>
-                        </div>
-                    </div>
-                    <div class="content">
-                        <div class="card-grid">
-                            <div class="expanded_card">
-                                <p class="label">Email:</p>
-                                <p class="value">{{ driver.email }}</p>
-                            </div>
-                            <div class="expanded_card">
-                                <p class="label">Asientos libres:</p>
-                                <p class="value">{{ driver.seats }}</p>
-                            </div>
-                            <div class="expanded_card">
-                                <p class="label">Días conduciendo:</p>
-                                <p class="value">{{ driver.daysDriven }}</p>
-                            </div>
-                            <div class="expanded_card">
-                                <p class="label">Tiempo de espera:</p>
-                                <p class="value">{{ driver.waitTime }}</p>
+        <div class="container">
+            <div class="button_container">
+                <a href="{{ path('driver_new') }}" class="primaryButton"><i class="ti ti-plus"></i>Nuevo conductor</a>
+            </div>
+            <div class="card_container">
+                {% for driver in pagination %}
+                    <div class="expandable-container">
+                        <div class="expandable">
+                            <span class="title">{{ driver.name }} {{ driver.lastName }}</span>
+                            <div class="icons">
+                                <a href="{{ path('driver_mod', {'id': driver.id, 'redirect': app.request.uri}) }}"
+                                   class="btn edit">
+                                    <i class="ti ti-edit" style="font-size: 1.5rem"></i>
+                                </a>
+                                <a href="#" class="btn delete" onclick="confirmDelete({{ driver.id }})"><i
+                                            class="ti ti-trash" style="font-size: 1.5rem"></i></a>
+                                <span class="icon"><i class="ti ti-caret-down-filled"
+                                                      style="font-size: 1.5rem"></i></span>
                             </div>
                         </div>
+                        <div class="content">
+                            <div class="card-grid">
+                                <div class="expanded_card">
+                                    <p class="label">Email:</p>
+                                    <p class="value">{{ driver.email }}</p>
+                                </div>
+                                <div class="expanded_card">
+                                    <p class="label">Asientos libres:</p>
+                                    <p class="value">{{ driver.seats }}</p>
+                                </div>
+                                <div class="expanded_card">
+                                    <p class="label">Días conduciendo:</p>
+                                    <p class="value">{{ driver.daysDriven }}</p>
+                                </div>
+                                <div class="expanded_card">
+                                    <p class="label">Tiempo de espera:</p>
+                                    <p class="value">{{ driver.waitTime }}</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
+            {# display navigation #}
+            <div class="paginator">
+                {{ knp_pagination_render(pagination) }}
+            </div>
         </div>
-        {# display navigation #}
-        <div class="paginator">
-            {{ knp_pagination_render(pagination) }}
-        </div>
-    </div>
-
     <script>
         function confirmDelete(groupId) {
             Swal.fire({
