--- a/templates/groups/card.html.twig
+++ b/templates/groups/card.html.twig
@@ -1,6 +1,6 @@
 <a href="{{ path('group_main') }}" class="card card-group">
     <div class="card-icon">
-        <i class="ti ti-users-group" style='font-size: 8rem;'></i>
+        <i class="ti ti-users-group" style='font-size: 8rem; opacity: 0;'></i>
     </div>
     <div class="card-text">
         <h3>Grupos</h3>
