--- a/templates/notify/card.html.twig
+++ b/templates/notify/card.html.twig
@@ -1,6 +1,6 @@
 <a href="{{ path('notify_main') }}" class="card card-notify">
     <div class="card-icon">
-        <i class="ti ti-bell" style='font-size: 8rem;'></i>
+        <i class="ti ti-bell" style='font-size: 8rem; opacity: 0;'></i>
     </div>
     <div class="card-text">
         <h3>Notificaciones</h3>
