--- a/templates/schedule/card.html.twig
+++ b/templates/schedule/card.html.twig
@@ -1,6 +1,6 @@
 <a href="{{ path('schedule_main') }}" class="card card-schedule">
     <div class="card-icon">
-        <i class="ti ti-clock-hour-1" style='font-size: 8rem;'></i>
+        <i class="ti ti-clock-hour-1" style='font-size: 8rem; opacity: 0;'></i>
     </div>
     <div class="card-text">
         <h3>Horario</h3>
