--- a/templates/users/card.html.twig
+++ b/templates/users/card.html.twig
@@ -1,6 +1,6 @@
 <a href="{{ path('driver_main') }}" class="card card-user">
     <div class="card-icon">
-        <i class="ti ti-users"></i>
+        <i class="ti ti-users" style="opacity: 0;"></i>
     </div>
     <div class="card-text">
         <h3>Usuarios</h3>
