--- a/templates/users/panel.html.twig
+++ b/templates/users/panel.html.twig
@@ -7,7 +7,7 @@
 
         <a href="{{ path('app_change_password') }}" class="card card-password">
             <div class="card-icon">
-                <i class="ti ti-brand-samsungpass" style='font-size: 8rem;'></i>
+                <i class="ti ti-brand-samsungpass" style='font-size: 8rem; opacity: 0;'></i>
             </div>
             <div class="card-text">
                 <h3>Cambiar contraseña</h3>
