--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -17,15 +17,17 @@ body{
     font-family: 'Jost','Roboto', 'Helvetica', 'Arial', sans-serif;
     font-size: large;
 }
+
 .container{
-    height: 100%;
+    height: calc(100vh - 50px);
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
-    padding: 4rem;
     justify-content: space-around;
     justify-content: center;
-    gap: 0 60px;
+    gap: 60px;
+    margin-top: 50px;
+    padding: 0 3rem;
 }
 /**
 
@@ -34,7 +36,7 @@ CSS FOR CARD
  */
 .card {
     height: auto;
-    min-width: 33%;
+    min-width: 45%;
     display: flex;
     flex-direction: column;
     align-items: center;
