--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -14,6 +14,8 @@ body {
 .navbar {
     background-color: var(--back-color);
     position: fixed;
+    top: 0;
+    z-index: 1000;
     width: 100%;
     height: 50px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
