--- a/templates/users/card_personal.html.twig
+++ b/templates/users/card_personal.html.twig
@@ -1,6 +1,6 @@
 <a href="{{ path('driver_mod', {'id': app.user.driver.id, 'redirect': app.request.uri}) }}" class="card card-data">
     <div class="card-icon">
-    <i class="ti ti-id" style='font-size: 8rem;'></i>
+    <i class="ti ti-id" style='font-size: 8rem; opacity: 0;'></i>
     </div>
     <div class="card-text">
     <h3>Datos personales</h3>
