--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -131,10 +131,14 @@ CSS FOR CARD
     }
     .card{
         width: 100%;
-        padding-top: 1rem;
+    }
+    .card:hover {
+        background-color: var(--back-color);
+        cursor: pointer;
+        transform: scale(1.05);
     }
 }
-@media(max-width: 700px){
+@media(max-width: 900px){
     .container{
         flex-direction: column;
         flex-wrap: nowrap;
@@ -142,7 +146,11 @@ CSS FOR CARD
     }
     .card{
         width: 100%;
-        padding-top: 1rem;
+    }
+    .card:hover {
+        background-color: var(--back-color);
+        cursor: pointer;
+        transform: scale(1.05);
     }
 }
 /**
