--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,64 +1,95 @@
 {% set current_path = app.request.get('_route') %}
 {% if current_path != 'app_login' %}
-    <div class="navbar">
-        <ul class="sidebar">
-            <li><a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                         class="icon icon-tabler icons-tabler-outline icon-tabler-x">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M18 6l-12 12"/>
-                        <path d="M6 6l12 12"/>
-                    </svg>
-                </a></li>
-            {% if app.user %}
-                <li><a href="{{ path('user_panel') }}"><i class="ti ti-user-filled"></i> {{ app.user.driver }} </a></li>
-            {% endif %}
-            <li><a href="{{ path('app_logout') }}"><i class="ti ti-logout"></i>Log Out</a></li>
-        </ul>
-        <ul>
-            <li>
-                <a href="{{ path('main') }}"><img src="{{ asset('images/LogoCommunWheelsWhite.png') }}" alt="Logo">CommunWheels</a>
-            </li>
-            <li class="hideOnMobile">
-                <a href="{{ path('group_main') }}">Grupos</a>
-            </li>
-            {% if is_granted('ROLE_GROUP_ADMIN') %}
-                <li class="hideOnMobile">
-                    <a href="{{ path('driver_main') }}">Usuarios</a>
-                </li>
-            {% else %}
-                <li></li>
-            {% endif %}
-            <li class="hideOnMobile">
-                <a href="{{ path('notify_main') }}">Notificaciones</a>
-            </li>
-            {% if app.user %}
-                <li class="hideOnMobile">
-                    <a href="#" id="userDropdown">
-                        {% if app.user.driver is null %}
-                            <i class="ti ti-user-filled"></i> {{ app.user }}
-                        {% else %}
-                            <i class="ti ti-user-filled"></i> {{ app.user.driver }}
-                        {% endif %}
-                    </a>
-                    <div class="dropdown-content">
-                        <a href="{{ path('user_panel') }}">Panel de Usuario</a>
-                        <a href="{{ path('app_logout') }}"><i class="ti ti-logout"></i>Log Out</a>
-                    </div>
-                </li>
+	<div class="navbar">
+		<ul class="sidebar">
+			<li>
+				<a href="#">
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<path d="M18 6l-12 12"/>
+						<path d="M6 6l12 12"/>
+					</svg>
+				</a>
+			</li>
+			{% if app.user.driver is not null %}
+				<li>
+					<a href="{{ path('user_panel') }}">
+						<i class="ti ti-user-filled"></i>
+						{{ app.user.driver }}
+					</a>
+				</li>
+			{% else %}
+				<li>
+					<a href="{{ path('user_panel') }}">
+						<i class="ti ti-user-filled"></i>
+						{{ app.user}}
+					</a>
+				</li>
+			{% endif %}
+			<li>
+				<a href="{{ path('group_main') }}">Grupos</a>
+			</li>
+			{% if is_granted('ROLE_GROUP_ADMIN') %}
+				<li>
+					<a href="{{ path('driver_main') }}">Usuarios</a>
+				</li>
+			{% else %}
+				<li></li>
+			{% endif %}
+			<li>
+				<a href="{{ path('notify_main') }}">Notificaciones</a>
+			</li>
+			<li>
+				<a href="{{ path('app_logout') }}">
+					<i class="ti ti-logout"></i>Log Out</a>
+			</li>
+		</ul>
+		<ul>
+			<li>
+				<a href="{{ path('main') }}"><img src="{{ asset('images/LogoCommunWheelsWhite.png') }}" alt="Logo">CommunWheels</a>
+			</li>
+			<li class="hideOnMobile">
+				<a href="{{ path('group_main') }}">Grupos</a>
+			</li>
+			{% if is_granted('ROLE_GROUP_ADMIN') %}
+				<li class="hideOnMobile">
+					<a href="{{ path('driver_main') }}">Usuarios</a>
+				</li>
+			{% else %}
+				<li></li>
+			{% endif %}
+			<li class="hideOnMobile">
+				<a href="{{ path('notify_main') }}">Notificaciones</a>
+			</li>
+			{% if app.user %}
+				<li class="hideOnMobile">
+					<a href="#" id="userDropdown">
+						{% if app.user.driver is null %}
+							<i class="ti ti-user-filled"></i>
+							{{ app.user }}
+						{% else %}
+							<i class="ti ti-user-filled"></i>
+							{{ app.user.driver }}
+						{% endif %}
+					</a>
+					<div class="dropdown-content">
+						<a href="{{ path('user_panel') }}">Panel de Usuario</a>
+						<a href="{{ path('app_logout') }}">
+							<i class="ti ti-logout"></i>Log Out</a>
+					</div>
+				</li>
 
-            {% endif %}
-            <li class="menuButton"><a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                         class="icon icon-tabler icons-tabler-outline icon-tabler-menu-2">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M4 6l16 0"/>
-                        <path d="M4 12l16 0"/>
-                        <path d="M4 18l16 0"/>
-                    </svg>
-                </a></li>
-        </ul>
-    </div>
+			{% endif %}
+			<li class="menuButton">
+				<a href="#">
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-menu-2">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<path d="M4 6l16 0"/>
+						<path d="M4 12l16 0"/>
+						<path d="M4 18l16 0"/>
+					</svg>
+				</a>
+			</li>
+		</ul>
+	</div>
 {% endif %}
