--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,4 +1,4 @@
-{% set current_path = app.request.get('_route') %}
+{% set current_path = app.request.attributes.get('_route') %}
 {% if current_path != 'app_login' %}
 	<div class="navbar">
 		<ul class="sidebar">
@@ -49,17 +49,17 @@
 				<a href="{{ path('main') }}"><img src="{{ asset('images/LogoCommunWheelsWhite.png') }}" alt="Logo">CommunWheels</a>
 			</li>
 			<li class="hideOnMobile">
-				<a href="{{ path('group_main') }}">Grupos</a>
+				<a href="{{ path('group_main') }}" class="{{ current_path == 'group_main' ? 'active' : '' }}">Grupos</a>
 			</li>
 			{% if is_granted('ROLE_GROUP_ADMIN') %}
 				<li class="hideOnMobile">
-					<a href="{{ path('driver_main') }}">Usuarios</a>
+					<a href="{{ path('driver_main') }}" class="{{ current_path == 'driver_main' ? 'active' : '' }}">Usuarios</a>
 				</li>
 			{% else %}
 				<li></li>
 			{% endif %}
 			<li class="hideOnMobile">
-				<a href="{{ path('notify_main') }}">Notificaciones</a>
+				<a href="{{ path('notify_main') }}" class="{{ current_path == 'notify_main' ? 'active' : '' }}">Notificaciones</a>
 			</li>
 			{% if app.user %}
 				<li class="hideOnMobile">
