--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,11 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
-        {% if is_granted('ROLE_GROUP_ADMIN') %}
-            {% include 'users/card.html.twig' %}
-        {% endif %}
-        {% include 'groups/card.html.twig' %}
-        {% include 'notify/card.html.twig' %}
-    </div>
+	<div class="scroll-container">
+		<div class="container">
+            <h1>Bienvenido</h1>
+            <p>Este es un texto de bienvenida. Puedes agregar más detalles aquí.</p>
+		</div>
+		<div class="container">
+        <h1 class="titulo">¿Que quieres hacer?</h1>
+			{% if is_granted('ROLE_GROUP_ADMIN') %}
+				{% include 'users/card.html.twig' %}
+			{% endif %}
+			{% include 'groups/card.html.twig' %}
+			{% include 'notify/card.html.twig' %}
+		</div>
+	</div>
 {% endblock %}
