--- a/templates/groups/card.html.twig
+++ b/templates/groups/card.html.twig
@@ -3,6 +3,6 @@
         <i class="ti ti-users-group" style='font-size: 8rem; opacity: 0;'></i>
     </div>
     <div class="card-text">
-        <h3>Grupos</h3>
+        <h3>Gestionar grupos</h3>
     </div>
 </a>
