--- a/templates/users/card.html.twig
+++ b/templates/users/card.html.twig
@@ -3,6 +3,6 @@
         <i class="ti ti-users" style="opacity: 0;"></i>
     </div>
     <div class="card-text">
-        <h3>Usuarios</h3>
+        <h3>Gestionar usuarios</h3>
     </div>
 </a>
