--- a/templates/users/main.html.twig
+++ b/templates/users/main.html.twig
@@ -31,12 +31,12 @@
                                     <p class="value">{{ driver.seats }}</p>
                                 </div>
                                 <div class="expanded_card">
-                                    <p class="label">Días conduciendo:</p>
+                                    <p class="label">Días conducidos:</p>
                                     <p class="value">{{ driver.daysDriven }}</p>
                                 </div>
                                 <div class="expanded_card">
                                     <p class="label">Tiempo de espera:</p>
-                                    <p class="value">{{ driver.waitTime }}</p>
+                                    <p class="value">{{ driver.waitTime }} horas</p>
                                 </div>
                             </div>
                         </div>
