--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,9 +5,10 @@
 		<div class="container">
             <h1>Bienvenido</h1>
             <p>Este es un texto de bienvenida. Puedes agregar más detalles aquí.</p>
+			<h1 class="titulo">¿Que quieres hacer?</h1>
+			<a href="" id="scroll-to-cards" class="bouncing-arrow"><i class="ti ti-circle-arrow-down" style="font-size: 4rem;"></i></a>
 		</div>
-		<div class="container">
-        <h1 class="titulo">¿Que quieres hacer?</h1>
+		<div class="container" id="cards">
 			{% if is_granted('ROLE_GROUP_ADMIN') %}
 				{% include 'users/card.html.twig' %}
 			{% endif %}
@@ -15,4 +16,36 @@
 			{% include 'notify/card.html.twig' %}
 		</div>
 	</div>
+	<style>
+        .bouncing-arrow {
+            display: inline-block;
+            animation: bounce 2s infinite;
+            text-decoration: none;
+            color: white;
+            position: absolute;
+            bottom: 20px;
+            transform: translateX(-50%);
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-20px);
+            }
+            60% {
+                transform: translateY(-10px);
+            }
+        }
+    </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var scrollToCardsLink = document.getElementById('scroll-to-cards');
+            scrollToCardsLink.addEventListener('click', function(event) {
+                event.preventDefault();
+                document.getElementById('cards').scrollIntoView({ behavior: 'smooth' });
+            });
+        });
+    </script>
 {% endblock %}
